fixed item z-index

--- a/src/TodoListItem.css
+++ b/src/TodoListItem.css
@@ -5,5 +5,5 @@
   top: calc(14rem / 16);
   left: calc(1rem / 16);
   background-color: #f1f5f9;
-  z-index: -1;
+  /* z-index: -1; */
 }
